--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "homepage": "https://github.com/SalvadorGragirena/TerceraEntrega#readme",
   "dependencies": {
     "sass": "^1.55.0"
-  }
+  },
+  "devDependencies": {}
 }
