--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Este es un demo de la clase de sass",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "sass scss/prueba.scss css/prueba.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,7 @@
   },
   "homepage": "https://github.com/SalvadorGragirena/Tercera_Entrega#readme",
   "dependencies": {
+    "nodemon": "^2.0.20",
     "sass": "^1.55.0"
-  },
-  "devDependencies": {}
+  }
 }
